--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Le livre dont vous êtes le héros</title>
+    <title>Le site dont vous êtes le héros</title>
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
     <!-- 🦊 Consigne 2: Remplacer le contenu du lien par votre teaser.  -->
-    <a href="projet">Mon projet</a>
+    <a href="projet">La tour infinie</a>
   </body>
 </html>
