--- a/pages/page1.html
+++ b/pages/page1.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,10 +9,11 @@
   <body>
     <h1>La Tour Infinie</h1>
     <p style="text-align: center">
-      Vous êtes un alien qui vient d'arriver sur Terre. Vous vous retrouvez en
-      bas d'une tour aux escaliers infinis. Dans cette tour, vous serez amené à
-      faire des choix suivant votre moral. Il n'y a pas de bonnes ou de
-      mauvaises décisions, mais attention,
+      Vous êtes un alien qui vient d'arriver sur Terre, plus particulièrement
+      aux USA. Votre planète est à l'opposé des codes moraux de la Terre. Vous
+      vous retrouvez en bas d'une tour aux escaliers infinis. Dans cette tour,
+      vous serez amené à faire des choix suivant votre moral. Il n'y a pas de
+      bonnes ou de mauvaises décisions, mais attention,
       <strong
         >REMETTRE EN QUESTION VOS VALEURS VOUS SERA SÛREMENT UTILE.</strong
       >
