--- a/pages/page3.html
+++ b/pages/page3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -10,10 +10,11 @@
     <h1>ETAGE 2: Logements vides</h1>
     <p>
       Après avoir monté les escaliers avec la famille, vous découvrez un étage
-      énorme plein de logements vides. En voyant cela, vous êtes persuadés
-      d'avoir résolu le problème de manque d'abri. La mère de famille vous
-      informe donc de l'inégalité de loger des personnes dans ces endroits
-      gratuitement. Que faites-vous?
+      énorme plein de logements vides. Cet étage appartient à de riches
+      proptiétaires. En voyant cela, vous êtes persuadés d'avoir résolu le
+      problème de manque d'abri. La mère de famille vous informe donc de
+      l'inégalité de loger des personnes dans ces endroits gratuitement. Que
+      faites-vous?
     </p>
     <p>
       <a class="moral" href="../pages/page5.html"
