--- a/pages/page4.html
+++ b/pages/page4.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,12 +11,11 @@
     <p>
       Une fois en haut des escaliers, vous tombez sur une pièce remplie de
       nourriture à volonté de toute sorte, d'habits neufs et d'argent. Au fond
-      de la pièce il y a un panneau avec indiqué que tout est destiné à une
-      seule personne, la plus méritante de la tour. Qu'en pensez-vous, qui
-      devrait avoir droit à ce trésor?
+      de la pièce il y a un panneau avec indiqué que rien du trésor ne peut être
+      partagé. Qu'en pensez-vous, qui devrait avoir droit à ce trésor?
     </p>
     <p>
-      <a class="moral" href="../pages/page6trap.html">Vous</a>
+      <a class="moral" href="../pages/page10.html">Vous</a>
     </p>
     <p>
       <a class="moral" href="../pages/page9.html">La famille</a>
