--- a/pages/page7fin.html
+++ b/pages/page7fin.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -11,8 +11,8 @@
     <p>
       Vous vous faites escorté hors de la tour. On vous offre à manger, à boire
       et une couverture et pendant que vous vous délectez, vous regardez cette
-      famille qui n'avait rien demandé se faire embarquer. Oui, avez gagné, mais
-      à quel prix?
+      famille qui n'avait rien demandé se faire embarquer. Oui, vous avez gagné,
+      mais à quel prix?
     </p>
     <p>
       <a class="immoral" href="../pages/page1.html"> Recommencer</a>
