--- a/pages/page9.html
+++ b/pages/page9.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -13,8 +13,11 @@
       jusqu'aux dents vous abattent immédiatement.
       <strong
         >Attention, n'oubliez pas que pour eux, vous n'êtes rien d'autre qu'un
-        étranger criminel.</strong
-      >
+        criminel étranger.</strong>
+        
+      <p>
+      <a class="immoral" href="../pages/page1.html"> Recommencer</a>
+    </p>
     </p>
   </body>
 </html>
