--- a/pages/page11.html
+++ b/pages/page11.html
@@ -3,15 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Piège</title>
-    <link rel="stylesheet" href="../styles/stylespage6.css" />
+    <title>Bravo</title>
+    <link rel="stylesheet" href="../styles/stylespage11.css" />
   </head>
   <body>
-    <h1>OOOPS, c'était un piège</h1>
-    <p>
-      Une équipe de manifestant, scandalisée par votre attitude, vous jette par
-      la fenêtre de la tour.
-    </p>
+    <h1>Bravo</h1>
+    <p>Vous êtes sorti de la tour!! Vous devriez être heureux..</p>
     <p>
       <a class="immoral" href="../pages/page1.html"> Recommencer</a>
     </p>
