--- a/pages/page3.html
+++ b/pages/page3.html
@@ -11,7 +11,7 @@
     <p>
       Après avoir monté les escaliers avec la famille, vous découvrez un étage
       énorme plein de logements vides. Cet étage appartient à de riches
-      proptiétaires. En voyant cela, vous êtes persuadés d'avoir résolu le
+      propriétaires. En voyant cela, vous êtes persuadés d'avoir résolu le
       problème de manque d'abri. La mère de famille vous informe donc de
       l'inégalité de loger des personnes dans ces endroits gratuitement. Que
       faites-vous?
